--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-# ============================================================
-# Athena - Autonomous Research Assistant
-# Core Requirements
-# ============================================================
-
 # Core Framework & UI
 streamlit>=1.30.0
 streamlit-option-menu>=0.3.6
@@ -11,9 +6,9 @@ streamlit-option-menu>=0.3.6
 PyPDF2>=3.0.0
 
 # LangChain Stack
-langchain>=0.1.0,<0.3.0
-langchain-core>=0.1.0,<0.3.0
-langchain-community>=0.0.10,<0.3.0
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.10
 langchain-text-splitters>=0.0.1
 langchain-huggingface>=0.0.1
 
@@ -33,11 +28,11 @@ networkx>=3.0
 pyvis>=0.3.2
 scikit-learn>=1.3.0
 
-# Voice Interface (Optional - faster-whisper is Windows-friendly)
+# Voice Interface
 faster-whisper>=0.10.0
 gtts>=2.5.0
 
 # Core Utilities
 requests>=2.31.0
 python-dotenv>=1.0.0
-numpy>=1.24.0,<2.0.0
+numpy>=1.24.0
